Share rule definitions; split out formatting rules
Allows us to change rules in one place instead of several.
Involves changing config files from JSON to JS.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mapbox/eslint-config-mapbox",
   "version": "1.0.0",
   "description": "Generic eslint configuration for Mapbox",
-  "main": "node.json",
+  "main": "node.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/mapbox/eslint-config-mapbox.git"
