--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mapbox/eslint-config-mapbox",
   "version": "1.0.0",
   "description": "Generic eslint configuration for Mapbox",
-  "main": "node.json",
+  "main": "node.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/mapbox/eslint-config-mapbox.git"
@@ -12,5 +12,13 @@
   "bugs": {
     "url": "https://github.com/mapbox/eslint-config-mapbox/issues"
   },
-  "homepage": "https://github.com/mapbox/eslint-config-mapbox#readme"
+  "homepage": "https://github.com/mapbox/eslint-config-mapbox#readme",
+  "scripts": {
+    "lint": "eslint .",
+    "test": "npm run lint"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-node": "^6.0.1"
+  }
 }
