--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "eslint": "^7.3.1",
     "eslint-plugin-node": "^11.1.0"
+  },
+  "dependencies": {
+    "eslint-plugin-inclusive-language": "^1.2.0"
   }
 }
