--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lint": "eslint .",
     "test": "npm run lint"
   },
-  "devDependencies": {
-    "eslint": "^7.3.1",
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-node": "^11.1.0"
   }
 }
