--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/eslint-config-mapbox",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "Generic eslint configuration for Mapbox",
   "main": "node.js",
   "repository": {
@@ -18,9 +18,10 @@
     "test": "npm run lint"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-node": "^11.1.0"
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-unused-imports": "^3.1.0"
   }
 }
