--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-unused-imports": "^3.1.0"
   }
 }
