--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/eslint-config-mapbox",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "Generic eslint configuration for Mapbox",
   "main": "node.js",
   "repository": {
@@ -21,7 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-unused-imports": "^3.1.0"
   }
 }
